--- a/css/main.css
+++ b/css/main.css
@@ -862,3 +862,34 @@ input[type=radio]:checked + .upload-effect-label .upload-effect-preview {
 .footer-social-item-vk {
   background-position: -84px 0;
 }
+
+.social__comment {
+  display: flex;
+  align-items: center;
+  color: #000;
+  padding: 20px 30px;
+  max-width: 600px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.social__picture {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: block;
+  margin-right: 10px;
+  object-fit: cover;
+}
+
+.social__text {
+  text-align: left;
+}
+
+.social__caption{
+  font-size: 18px;
+  color: #000;
+  font-weight: 700;
+  text-align: left;
+  padding: 10px;
+}
